fix: use .toList() with double cast in toSchemaList